# docs/swagger.yaml
@@ -113,6 +113,21 @@ definitions:
       thumbnail:
         type: string
     type: object
+  request.InsertHealthNewReq:
+    properties:
+      author:
+        type: string
+      content:
+        type: string
+      cover:
+        type: string
+      sort:
+        type: integer
+      status:
+        type: string
+      title:
+        type: string
+    type: object
   request.Login:
     properties:
       captcha:
@@ -219,6 +234,24 @@ definitions:
       thumbnail:
         type: string
     type: object
+  request.UpdateHealthNewReq:
+    properties:
+      author:
+        type: string
+      content:
+        type: string
+      cover:
+        type: string
+      id:
+        description: id
+        type: integer
+      sort:
+        type: integer
+      status:
+        type: string
+      title:
+        type: string
+    type: object
   request.WxLogin:
     properties:
       appid:
@@ -320,6 +353,37 @@ definitions:
         description: 更新时间
         type: string
     type: object
+  system.SysBrand:
+    properties:
+      brandPrice:
+        type: integer
+      cateId:
+        type: integer
+      createdTime:
+        description: 创建时间
+        type: string
+      deletedTime:
+        description: 删除时间
+        type: string
+      icon:
+        type: string
+      id:
+        description: 主键ID
+        type: integer
+      name:
+        type: string
+      shopId:
+        type: integer
+      sort:
+        type: integer
+      status:
+        type: string
+      type:
+        type: integer
+      updatedTime:
+        description: 更新时间
+        type: string
+    type: object
   system.SysCategory:
     properties:
       content:
@@ -346,6 +410,35 @@ definitions:
       status:
         type: string
       thumbnail:
+        type: string
+      updatedTime:
+        description: 更新时间
+        type: string
+    type: object
+  system.SysHealthNews:
+    properties:
+      author:
+        type: string
+      content:
+        type: string
+      cover:
+        type: string
+      createdTime:
+        description: 创建时间
+        type: string
+      deletedTime:
+        description: 删除时间
+        type: string
+      id:
+        description: 主键ID
+        type: integer
+      pv:
+        type: integer
+      sort:
+        type: integer
+      status:
+        type: string
+      title:
         type: string
       updatedTime:
         description: 更新时间
@@ -407,6 +500,35 @@ info:
   title: Swagger Example API
   version: 0.0.1
 paths:
+  /base/HealthNewDetail:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: ' '
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                ' msg':
+                  type: string
+                data:
+                  $ref: '#/definitions/system.SysHealthNews'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 获取新闻资讯详情
+      tags:
+      - Health
   /base/advertList:
     post:
       consumes:
@@ -468,7 +590,7 @@ paths:
                   - properties:
                       list:
                         items:
-                          $ref: '#/definitions/system.SysAdvert'
+                          $ref: '#/definitions/system.SysBrand'
                         type: array
                     type: object
               type: object
@@ -622,6 +744,35 @@ paths:
       summary: 删除类目
       tags:
       - Base
+  /base/deleteHealthNew/:id:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: ' '
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                ' msg':
+                  type: string
+                data:
+                  type: boolean
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 删除新闻
+      tags:
+      - Health
   /base/insertAdvert:
     post:
       consumes:
@@ -706,6 +857,34 @@ paths:
       summary: 添加类目
       tags:
       - Base
+  /base/insertHealthNew:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: ' '
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.InsertHealthNewReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 添加新闻资讯
+      tags:
+      - Health
   /base/login:
     post:
       parameters:
@@ -822,6 +1001,36 @@ paths:
       summary: 更新类目
       tags:
       - Base
+  /base/updateHealthNew:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: ' '
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.UpdateHealthNewReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                ' msg':
+                  type: string
+                data:
+                  type: boolean
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 更新新闻资讯
+      tags:
+      - Health
   /base/wxLogin:
     post:
       parameters:
@@ -848,6 +1057,41 @@ paths:
       summary: 授权登录
       tags:
       - Base
+  /health/healthNewsList:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 页码, 每页大小
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.PageInfo'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/response.PageResult'
+                  - properties:
+                      list:
+                        items:
+                          $ref: '#/definitions/system.SysHealthNews'
+                        type: array
+                    type: object
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 获取新闻资讯列表
+      tags:
+      - Health
   /jwt/jsonInBlacklist:
     post:
       consumes:
